<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Delicious</string>

    <!-- Common -->
    <string name="menu_refresh">Refresh</string>
    <string name="field_empty_error">%s can\'t be empty.</string>
    
    <!-- MainActivity -->
    <string name="menu_add">Add link</string>
    <string name="menu_logout">Logout</string>
    
    <string name="menu_title">Menu</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_tags">Tags</string>
    
    <string name="clipboard_text">Save copied link?</string>
    <string name="clipboard_button">Save</string>
    
    <string name="posts_more_ellipsis">+ %d</string>
    
    <!-- PostListActivity -->
    <string name="page_recent">Recent</string>
    <string name="page_tag">Tag: %s</string>
    
    <!-- TagListActivity -->
    <string name="page_tags">Tags</string>
    
    <!-- AddBookmarkActivity -->
    <string name="activity_add_bookmark_title">Save link</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_save">Save</string>
    
    <string name="field_url">URL</string>
    <string name="field_url_error">Invalid URL.</string>
    <string name="field_title">Title</string>
    <string name="field_title_fetching">Fetching title…</string>
    <string name="field_title_fetching_failed">Failed to fetch title</string>
    <string name="field_notes">Notes</string>
    <string name="field_tags">Tags</string>
    <string name="field_tags_hint">Tags, comma separated</string>
    <string name="field_mark_private">Mark as private</string>
    
    <string name="toast_bookmark_invalid">Invalid input</string>
    <string name="dialog_saving_message">Saving…</string>
    
    <!-- LoginActivity -->
    <string name="activity_login_title">Sign in</string>
    <string name="dialog_logging_in">Logging in…</string>
    <string name="field_username">Username</string>
    <string name="field_password">Password</string>
    <string name="button_login">Login</string>
    
    <string name="toast_account_exists">Only one account is supported</string>
    <string name="toast_login_failed">Login failed, please try again</string>
    
    <!-- ConnectionErrorFragment -->
    <string name="dialog_button_retry">Retry</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_more">More</string>
    <string name="dialog_connection_error_title">Connection error</string>
    <string name="dialog_connection_error_message">A network error has occurred. Please check that you
        are connected to the network and try again.</string>
    
    <!-- BookmarkService -->
    <string name="toast_bookmark_saved">Link saved to Delicious</string>
    <string name="toast_bookmark_saved_failed">Failed to save link, please try again</string>

</resources>